--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/types": "^7.19.4",
     "babel-template": "^6.26.0"
   },
   "repository": {
